syntax = "proto3";

package com.academy.fintech.payment;

option java_multiple_files = true;

service DebitPaymentService {
  rpc processPayment(DebitPayment) returns (PaymentResult) {}
}

message DebitPayment {
  string agreementId = 1;
  string paymentAmount = 2;
}

message PaymentResult {
  bool result = 1;
}